static/css/custom.css
/* ... */
.restyled-garrick p a code {
  color: var(--red);
  text-decoration: underline;
}

.restyled-garrick .caption {
  color: var(--text-light);
}

.restyled-garrick .hamburger-inner,
.restyled-garrick .hamburger-inner::before,
.restyled-garrick .hamburger-inner::after {
  background-color: var(--primary-light);
}

.restyled-garrick .hamburger-inner.is-active,
.restyled-garrick .hamburger-inner.is-active::before,
.restyled-garrick .hamburger-inner.is-active::after {
  background-color: var(--primary-light);
}

.restyled-garrick .sidebar .sidebar-nav {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.restyled-garrick .sidebar .sidebar-nav > * {
  min-width: 150px;
  margin-bottom: 1em;
}

.restyled-garrick .sidebar-nav a,
.restyled-garrick .sidebar-nav a:hover {
  color: var(--accent-dark);
}

@media screen and (min-width: 48em) {
  .restyled-garrick .sidebar .sidebar-nav {
    justify-content: left;
  }
  .restyled-garrick .sidebar .sidebar-nav > * {
    min-width: 100px;
    margin-bottom: 0;
  }
}

@media screen and (max-width: 767px) {
  .restyled-garrick .sidebar .sidebar-nav > * {
    margin-bottom: 0;
  }
}

/* WARNING: The following work for .restyled-garrick and may need to be revisted */
@media (min-width: 48em) and (max-width: 64em) {
  .content {
    margin-left: 16rem;
  }
  .sidebar {
    max-width: 16rem;
  }
}

.restyled-garrick .archive-item {
  position: relative;
  text-indent: -1em;
  margin-left: 1em;
  margin-bottom: 0.66em;
  padding-right: 4em;
  line-height: 1.25;
}

.restyled-garrick .archive-item time {
  position: absolute;
  top: 0;
  right: 0;
  color: var(--text-darkish);
}

.restyled-garrick td, .restyled-garrick th {
  border-color: var(--text-lightest)
}

.restyled-garrick tbody tr:nth-child(2n+1) td, 
.restyled-garrick tbody tr:nth-child(2n+1) th {
  background-color: var(--text-lightest)
}

.restyled-garrick .talk-table td, 
.restyled-garrick .talk-table th {
  border: none;
}

.restyled-garrick .talk-table tbody tr:nth-child(2n+1) td, 
.restyled-garrick .talk-table tbody tr:nth-child(2n+1) th {
  background: var(--background);
}

/* ---- DARK MODE !!!! ---- */
@media (prefers-color-scheme: dark) {
  :root {
    --background: #202020;
    --primary-dark: #eaeaea;
    --primary-light: #887ba3;
    --text-dark: #9a9a9a;
    --text-light: #424242;
    --text-lightest: #303030;
    --text-darkish: #bbb;
  }
  
  pre code, pre, code {
    background: var(--text-light);
  }
  
  pre.r {
    border-color: #646464;
  }
  
  pre.r + pre,
  pre.r + pre > code {
    background: var(--text-light);
  }
  
  .hljs {
    color: var(--text-dark);
    background: var(--text-light);
  }
 
  /* Dim Images Except on Hover */
  img {
    opacity: .5;
    transition: opacity .5s ease-in-out;
  }
  img:hover {
    opacity: 1;
  }
}

